<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guesstimate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="maps_status_txt">maps_status_txt</string>
    <string name="show_gps">Show GPS</string>
    <string name="title_activity_show_gps">ShowGPSActivity</string>

    <string name="gpsStatus">GPS Status</string>
    <string name="lat">Latitude</string>
    <string name="empty">--</string>
    <string name="longitude">Longitude</string>
    <string name="sat">Satellites in View</string>
    <string name="qual">Signalqualität</string>
    <string name="prov">Location Provider</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="read_value">Read Value</string>
    <string name="unbind_service">Unbind Service</string>

</resources>