<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/show_gps" android:title="@string/show_gps" android:orderInCategory="101"></item>
    <item android:id="@+id/start_service" android:orderInCategory="102" android:title="@string/start_service"></item>
    <item android:id="@+id/stop_service" android:orderInCategory="103" android:title="@string/stop_service"></item>
    <item android:id="@+id/bind_service" android:orderInCategory="104" android:title="@string/bind_service"></item>
    <item android:id="@+id/unbind_service" android:orderInCategory="105" android:title="@string/unbind_service"></item>
    <item android:id="@+id/read_value" android:orderInCategory="106" android:title="@string/read_value"></item>

</menu>